# MAA-Meow

./: .gitignore  README.md  README_EN.md  gradle.properties
.github/workflows/: build-dev.yml  build-release.yml
annotation-api/: build.gradle.kts
annotation-api/src/main/kotlin/com/aliothmoon/preferences/: PrefKey.kt  PrefSchema.kt
app/: asset-manifest.gradle.kts  build.gradle.kts
app/src/androidTest/java/com/aliothmoon/maameow/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/aliothmoon/maameow/: ITouchEventCallback.aidl  MaaCoreCallback.aidl  MaaCoreService.aidl  RemoteService.aidl
app/src/main/aidl/com/aliothmoon/maameow/remote/: PermissionGrantRequest.aidl  PermissionStateInfo.aidl
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.h
app/src/main/java/com/aliothmoon/maameow/: MainActivity.kt
app/src/main/java/com/aliothmoon/maameow/bridge/: NativeBridgeLib.java
app/src/main/native/: CMakeLists.txt  bridge.cpp  bridge.h  bridge_capture.cpp  bridge_capture.h  bridge_frame_buffer.cpp  bridge_frame_buffer.h  bridge_input.cpp  bridge_input.h  bridge_internal.h  bridge_preview.cpp  bridge_preview.h  launcher.c
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/aliothmoon/maameow/: ExampleUnitTest.kt  GameMuteCoordinatorContractTest.kt
docs/: BUILDING.md  ROADMAP.md
gradle/: libs.versions.toml
ksp-processor/: build.gradle.kts
scripts/: setup_maa_core.py
(+179 files in other folders)
